<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.IntrusionActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="#9b9b95" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#b7e6b2"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/select_to_allow_alert" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="40dp"
        android:text="@string/ring_alarm"
        android:textColor="#1a271c" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#b7e6b2"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/save_an_image" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="40dp"
        android:text="@string/save_image"
        android:textColor="#1a271c"
        android:onClick="saveimg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">


        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textOn="@string/normal_mode"
            android:textOff="@string/alert_mode"
            android:onClick="mode"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sw"
            android:layout_gravity="right"
            android:paddingStart="70dp"
            android:text="@string/switch_for_live_feed"
            android:textOn="@string/livefeed"
            android:textOff="@string/pictures"
            />
    </LinearLayout>

</LinearLayout>